samples/_failures_safe/1761287414_07fe09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d5d0640.c: In function ‘main’:
./samples/SAFE/__tmp_1d5d0640.c:151:23: error: expected ‘]’ at end of input
  151 |         unique_words[i
      |                       ^
      |                       ]
./samples/SAFE/__tmp_1d5d0640.c:151:9: error: expected declaration or statement at end of input
  151 |         unique_words[i
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_1d5d0640.c:151:9: error: expected declaration or statement at end of input
